--- a/css/styles.css
+++ b/css/styles.css
@@ -625,10 +625,11 @@ color: rgba(255, 255, 255, 0.6);
 
 }
 
-.close-icon{
+/* .close-icon{
   margin-left: 10px;
-  pa
+  
 }
+*/
 /*_____________________ */
 /* -------------------сторінка portfolio------------------ */
 
@@ -773,6 +774,8 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .btn-close {
@@ -785,9 +788,156 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
     top: 8px;
     right: 8px;
     cursor: pointer;
+    box-sizing: border-box;
+    display: flex;
+     align-items: center;
+    
+  
 }
 
 .is-hidden {
     opacity: 0;
     pointer-events: none;
+}
+
+.modal-title {
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+font-weight: bold;
+
+color: var(--title-text-color);
+margin-top: 40px;
+margin-bottom: 12px;
+
+}
+
+.form-label{
+display: block;
+margin-bottom: 5px;
+font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+color: #757575;
+}
+/*------------------------------------------------------*/
+
+.human-data {
+margin-bottom: 10px;
+}
+
+.form-input {
+width: 100%;
+height: 45px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+box-sizing: border-box;
+border-radius: 4px;
+margin-bottom: 10px;
+
+padding-left: 40px;
+outline: none;
+}
+
+.text-coment:focus,
+.form-input:focus {
+    border-color: var(--text-line);
+}
+
+.form-input:focus + .form-icon {
+    fill: var(--text-line);
+}
+
+
+
+
+.form-cpment {
+    width: 100%;
+    height: 120px;
+    border: 1px solid #999999;
+    border-radius: 5px;
+    padding: 5px 10px;
+    resize: none;
+    
+    
+    font-size: 12px;
+line-height: 11.16;
+letter-spacing: 0.01em;
+
+color: rgba(117, 117, 117, 0.5);
+}
+
+.form-cpment::placeholder {
+    font-size: 14px;
+}
+
+.input-wrapper {
+    display: block;
+    position: relative;
+}
+
+.form-icon {
+    position: absolute;
+    left: 12px;
+    top: 25%;
+    
+}
+
+
+
+.check-text {
+    font-size: 14px;
+    color: var(--fifth-text-color);
+    display: flex;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.check-item {
+    width: 15px;
+    height: 15px;
+    border: 2px solid #000000;
+    border-radius: 3px;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-checkbox:checked + .check-text > .check-item {
+    background-color: var(--text-line);
+    border-color: transparent;
+}
+
+.form-btn {
+  width: 200px;
+  height: 50px;  
+  display: block;
+    margin: 0 auto;
+  font-weight: bold;
+font-size: 16px;
+line-height: 1.87;
+/* display: flex; */
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+background: #188CE8;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+margin-bottom: 40px;
+
+}
+.link-check {
+  color: var(--text-line);
+}
+
+.text-coment{
+width: 100%;
+height: 120px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+box-sizing: border-box;
+border-radius: 4px;
+padding: 12px 16px;
+resize: none;
 }
