--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ position: relative;
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
-
+font-weight: 700;
   margin-left: auto;
   margin-right: auto;
   padding: 10px 32px;
@@ -585,7 +585,7 @@ margin-left: 93px;
 
 
 .futer-forn-button{
-     display: inline;
+     display: flex;
     align-items: center;
     justify-content: center;
   color: var(--primary-white-color);
@@ -683,8 +683,8 @@ color: rgba(255, 255, 255, 0.6);
   margin-left: 8px;
 }
 
-.project-list-item:hover,
-.project-list-item:focus {
+.project-button:hover,
+.project-button:focus {
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
