--- a/css/styles.css
+++ b/css/styles.css
@@ -625,11 +625,11 @@ color: rgba(255, 255, 255, 0.6);
 
 }
 
-/* .close-icon{
+.close-icon{
   margin-left: 10px;
   
 }
-*/
+
 /*_____________________ */
 /* -------------------сторінка portfolio------------------ */
 
