--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ body {
 
 .list {
 position: relative;
+
 }
 .portfolio-link::after,
 .list .link::after {
@@ -164,16 +165,14 @@ position: relative;
   top: 48px;
   opacity: 0;
   transform: scale(0);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link::after,
 .list .link:hover::after {
   opacity: 1;
   transform: scale(1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail {
@@ -189,7 +188,7 @@ position: relative;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .address-list-item{
@@ -210,8 +209,7 @@ position: relative;
 .telef-icon {
   margin-right: 10px;
   fill: var(--primary-text-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav,
 .mail,
@@ -227,7 +225,7 @@ position: relative;
 .mail:focus,
 .telef:focus {
   color: var(--text-line);
-}
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 /* ГЕРОЙ */
 
@@ -522,14 +520,17 @@ border-color: var(--text-line);
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   list-style: none;
+
 }
 
-/* .mail:hover */
+
 .footer-mail:hover,
 .footer-telef:hover,
 .footer-mail:focus,
 .footer-telef:focus {
   color: var(--text-line);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .addres,
@@ -571,6 +572,8 @@ margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .furet-social-icon {
@@ -648,6 +651,7 @@ color: rgba(255, 255, 255, 0.6);
 .portfolio-link {
   text-decoration: none;
   color: var(--text-line);
+
 }
 /* кнопки в портфоліо */
 .project-button:hover,
@@ -918,6 +922,7 @@ color: rgba(117, 117, 117, 0.5);
     background-color: var(--text-line);
     border-color: transparent;
 }
+
 
 .form-btn {
 
